--- a/template/chat.html
+++ b/template/chat.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="chatapp">
-<head >
+<html lang="en" >
+<head>
     <meta charset="utf-8">
     <!--  This file has been downloaded from bootdey.com    @bootdey on twitter -->
     <!--  All snippets are MIT license http://bootdey.com/license -->
@@ -14,8 +14,9 @@
     -->
     <title>facebook messenger chat - Bootdey.com</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="js/app.js" charset="utf-8"></script>
     <style type="text/css">
@@ -208,7 +209,13 @@
     position: relative;
     margin: 20px -20px -20px;
     padding: 20px;
-    background: #46be8a;
+}
+.chat-answer-box .answer-add {
+    clear: both;
+    position: relative;
+    margin: 20px -20px -20px;
+    padding: 20px;
+      background: #46be8a;
 }
 .chat-answer-box .answer-add input {
     border: none;
@@ -262,10 +269,11 @@
 }
     </style>
 </head>
-<body>
+<body ng-app="chatapp"  ng-controller="chatCtrl">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.6.8-fix/jquery.nicescroll.min.js"></script>
-<div class="content container-fluid bootstrap snippets" ng-controller="chatCtrl">
+<div class="content container-fluid bootstrap snippets">
       <div class="row row-broken">
         <div class="col-sm-3 col-xs-12">
           <div class="col-inside-lg decor-default chat" style="overflow: hidden; outline: none;" tabindex="5000">
@@ -276,7 +284,7 @@
                     <img src="http://bootdey.com/img/Content/avatar/avatar1.png" alt="User name">
                     <div class="status off"></div>
                     </div>
-                    <div class="name">{{user.username}}</div>
+                    <div class="name">User name</div>
                     <div class="mood">User mood</div>
                 </div>
 
@@ -397,9 +405,8 @@
                 </div>
                 <div class="time">5 min ago</div>
               </div>
-
-            </div>
-            <div class="answer-bg" >
+              <div class="answer-bg">
+              </div>
             </div>
           </div>
         </div>
@@ -408,7 +415,7 @@
 
         </div>
         <div class="col-sm-9">
-          <div class="chat-answer-box">
+          <div class="chat-answer-box" style="margin-left:29px;margin-right:35px;">
             <div class="answer-add" >
               <input placeholder="Write a message">
               <span class="answer-btn answer-btn-1"></span>
@@ -417,8 +424,6 @@
           </div>
         </div>
         </div>
-
-
       </div>
     </div>
 
@@ -427,6 +432,47 @@
 	$(function(){
     $(".chat").niceScroll();
 })
+$( document ).ready(function() {
+  $('#clientIDModal').modal('show');
+  console.log($('#idForm'));
+  $('#idSubmitBtn').click(function() {
+    $('#idForm').submit();
+  });
+
+  $('#idForm').submit(function(event) {
+    console.log($('#useridinput').val());
+    socket.emit('user joined' , $('#useridinput').val());
+    $('#clientIDModal').modal('hide');
+    return false;
+    });
+  });
 </script>
+<!-- modal -->
+
+<div class="modal fade" id="clientIDModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" >
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel"> </h4>
+      </div>
+      <div class="modal-body">
+        {{username}}
+      <form class="" id="idForm">
+      <div class="form-group">
+        <label for="id">Your username</label>
+        <input type="text" class="form-control"  placeholder="" id="usernameinput" ng-model="username">
+      </div>
+      </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button class="btn btn-primary" ng-click="joinChat(username)">Submit</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- end modal -->
 </body>
 </html>
